--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Stellagate</title>
+    <link rel="stylesheet" href="./index.css">
     <script src="./index.js"></script>
   </head>
   <body></body>
