--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Stellagate</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="./index.css">
     <link rel="icon" href="./img/icon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
